added companies list

--- a/companies/companies.html
+++ b/companies/companies.html
@@ -17,7 +17,9 @@
 
 			<div class="head">
 				<span>List of Companies</span>
-				<div ng-repeat= 'company in companies'></div>
+			</div>
+			<div class="companies"> 
+					<div class="company" ng-repeat= 'company in companies'>{{company.name}}</div>	
 			</div>
 
 		</div>
