added pie chart

--- a/companies/companies.html
+++ b/companies/companies.html
@@ -31,7 +31,7 @@
 			<div class="head">
 				<span>Companies by Location</span>
 			</div>
-
+			<div> <canvas id="myChart" width="400" height="400"></canvas> </div>
 		</div>
 		<div class="col-md-6 menu-item">
 
