--- a/companies/companies.html
+++ b/companies/companies.html
@@ -39,7 +39,33 @@
 				<span>News</span>
 			</div>
 
-		</div>
+			<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+			  <ol class="carousel-indicators">
+			    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			    <li data-target="#myCarousel" data-slide-to="1"></li>
+			    <li data-target="#myCarousel" data-slide-to="2"></li>
+			    <li data-target="#myCarousel" data-slide-to="3"></li>
+			  </ol>
+
+  <!-- Wrapper for slides -->
+			  <div class="carousel-inner" role="listbox">
+			    <div class="item active" ng-repeat = item in news>
+				    <div class="image">
+				      <img src = "" alt="Chania">
+				      	<span>Autor: {{item.autor}}</span>
+				      	<span>Public:{{item.date}}</span>
+				    </div>
+
+				    <div class="text">
+				      <span class="title">{{item.link}}</span>
+					      <article>
+					      	{{item.description}}
+					      </article>
+				    </div>
+			    </div>
+			  </div>
+			</div>
 	</div>
 </div>
 <!-- end wrapper -->
