--- a/companies/companies.html
+++ b/companies/companies.html
@@ -1,4 +1,3 @@
-<!-- begin wrapper -->
 <div class="wrapper">
 
 	<div class="row">
@@ -39,33 +38,31 @@
 				<span>News</span>
 			</div>
 
-			<div id="myCarousel" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-			  <ol class="carousel-indicators">
-			    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			    <li data-target="#myCarousel" data-slide-to="1"></li>
-			    <li data-target="#myCarousel" data-slide-to="2"></li>
-			    <li data-target="#myCarousel" data-slide-to="3"></li>
-			  </ol>
-
-  <!-- Wrapper for slides -->
-			  <div class="carousel-inner" role="listbox">
-			    <div class="item active" ng-repeat = item in news>
-				    <div class="image">
-				      <img src = "" alt="Chania">
-				      	<span>Autor: {{item.autor}}</span>
-				      	<span>Public:{{item.date}}</span>
+			<div id="slides_control">
+			 	<carousel interval="myInterval">
+			    <slide ng-repeat = "slide in news" active="slide.active" class="row">
+			       <!-- <div class="row"> -->
+				    <div class="col-md-4 image">
+				    	<div class="img">				    		
+				      		<img ng-src = {{slide.img}} alt="CodeIT">
+				    	</div>
+				    	<div>
+				    		<span>Author: {{slide.author}}</span>
+				      		<span>Public: {{getDate(slide.date)}}</span>
+				    	</div>
+				      	<!-- <span>Author: {{slide.author}}</span> -->
+				      	<!-- <span>Public:{{slide.date}}</span> -->
 				    </div>
 
-				    <div class="text">
-				      <span class="title">{{item.link}}</span>
+				    <div class="col-md-8 text">
+				      <h4 class="title">{{slide.link}}</span>
 					      <article>
-					      	{{item.description}}
+					      	{{slide.description}}
 					      </article>
 				    </div>
-			    </div>
-			  </div>
+				   <!-- </div> -->
+			    </slide>
+			    </carousel>
 			</div>
 	</div>
 </div>
-<!-- end wrapper -->
