--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div ng-view></div>
 	<script  src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js"></script>
 	<script  src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-route.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
 
 	<script  src="./angularApp.js"></script>
 	<script  src="./app.routing.js"></script>
