--- a/companies/companies.html
+++ b/companies/companies.html
@@ -6,13 +6,15 @@
 			<div class="head">
 				<span>Total Companies</span>
 			</div>
+
 			<div class="loader" ng-show = 'load'></div>
-			<!-- begin circle -->
+			
 			<div class="circle" ng-show = '!load'>
 				<div class="count"><span>{{countCompany}}</span></div>
 			</div>
-			<!-- end circle -->
+			
 		</div>
+
 		<div class="col-md-6 menu-item">
 			
 			<div class="head">
@@ -22,19 +24,28 @@
 			<div class="loader " ng-show = 'load'></div>
 
 			<div class="companies " ng-show ='!load'> 
-					<div class="company" ng-repeat= 'company in companies' ng-click='getPartners($index)'>{{company.name}}</div>	
+
+				<div class="company" ng-repeat= 'company in companies' ng-click='getPartners($index)'>{{company.name}}
+				</div>
+
 			</div>
 
 		</div>
 	</div>
 
 	<div class='wrapper-partners' ng-show='partnersFlag'>
-	<div class="head sort"> <span ng-click ='sortPartnersByName()'>Name</span> <span ng-click ='sortPartnersByPercentage()'>Percent</span> <span>Sort by:</span> </div>
-		<div class="partner"  ng-repeat="partner in partners">
-			<div class="bar" style= "height:{{partner.height}}; background-color: {{partner.backgroundColor}}"> 		
-			</div>
-			<div class="bar-text">{{partner.name}} - {{partner.percent}}</div>
+
+		<div class="head sort"> <span class='but' ng-click ='sortPartnersByName()'>Name</span> <span class='but' ng-click ='sortPartnersByPercentage()'>Percent</span> <span>Sort by:</span> 
 		</div>
+
+		<div class="partner"  ng-repeat="partner in partners">
+			<div class="bar" style= "height:{{partner.height}}; background-color: {{partner.backgroundColor}}">	
+			</div>
+
+			<div class="bar-text">{{partner.name}} - {{partner.percent}}</div>
+
+		</div>
+
 	</div>
 
 	<div class="row">
@@ -49,7 +60,10 @@
 			<div class="companies" ng-show="!chartFlag">
 				<div class="company" ng-repeat ='company in companiesByCountry'>{{company.name}}</div>
 			</div>
-			<div ng-show='chartFlag'> <canvas id="myChart" width="400" height="400" ng-click="click($event)"></canvas> </div>
+
+			<div ng-show='chartFlag'> <canvas id="myChart" width="400" height="400" ng-click="click($event)"></canvas>
+			</div>
+
 		</div>
 		<div class="col-md-6 menu-item">
 
@@ -59,28 +73,24 @@
 		
 			<div id="slides_control" >
 			 	<carousel interval="myInterval">
-			    <slide ng-repeat = "slide in news" active="slide.active" class="row">
-			       <!-- <div class="row"> -->
-				    <div class="col-md-4 image">
-				    	<div class="img">				    		
-				      		<img ng-src = {{slide.img}} alt="CodeIT">
-				    	</div>
-				    	<div>
-				    		<span>Author: {{slide.author}}</span>
-				      		<span>Public: {{getDate(slide.date)}}</span>
-				    	</div>
-				      	<!-- <span>Author: {{slide.author}}</span> -->
-				      	<!-- <span>Public:{{slide.date}}</span> -->
-				    </div>
+				    <slide ng-repeat = "slide in news" active="slide.active" class="row">
+					    <div class="col-md-4 image">
+					    	<div class="img">				    		
+					      		<img ng-src = {{slide.img}} alt="CodeIT">
+					    	</div>
+					    	<div>
+					    		<span>Author: {{slide.author}}</span>
+					      		<span>Public: {{getDate(slide.date)}}</span>
+					    	</div>
+					    </div>
 
-				    <div class="col-md-8 text">
-				      <h4 class="title">{{slide.link}}</span>
-					      <article>
-					      	{{slide.description}}
-					      </article>
-				    </div>
-				   <!-- </div> -->
-			    </slide>
+					    <div class="col-md-8 text">
+					      <h4 class="title">{{slide.link}}</span>
+						      <article>
+						      	{{slide.description}}
+						      </article>
+					    </div>
+				    </slide>
 			    </carousel>
 			</div>
 	</div>
