maked sort for max and min, changed function comparator for sort, changed date format

--- a/companies/companies.html
+++ b/companies/companies.html
@@ -80,7 +80,7 @@
 					    	</div>
 					    	<div>
 					    		<span>Author: {{slide.author}}</span>
-					      		<span>Public: {{getDate(slide.date)}}</span>
+					      		<span>Public: {{getDate(slide.date * 1000)}}</span>
 					    	</div>
 					    </div>
 
